--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon server",
     "client": "cd client && npm start",
     "server": "nodemon server",
-    "dev": "concurrently --kill-others \"npm run client\" \"npm run server\" ",
+    "dev": "concurrently --kill-others  \"npm run server\"  \"npm run client\" ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
