--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon server",
     "client": "cd client && npm start",
     "server": "nodemon server",
-    "dev": "concurrently --kill-others  \"npm run server\"  \"npm run client\" ",
+    "dev": "concurrently --kill-others  \"npm run client\"  \"npm run server\"  ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -20,6 +20,7 @@
     "concurrently": "^6.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dayjs": "^1.10.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "js-cookie": "^2.2.1",
