--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^5.12.0",
     "multer": "^2.0.0-rc.1",
     "nodemon": "^2.0.7",
+    "reactjs-popup": "^2.0.4",
     "validator": "^13.5.2"
   }
 }
