--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "client": "cd client && npm start",
     "server": "nodemon server",
     "dev": "concurrently --kill-others  \"npm run client\"  \"npm run server\"  ",
+    "build":"cd client && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {"node": "15.x"},
   "keywords": [],
   "author": "Assadi",
   "license": "ISC",
