--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "client": "cd client && npm start",
     "server": "nodemon server",
     "dev": "concurrently --kill-others  \"npm run client\"  \"npm run server\"  ",
+    "install-client":"cd client && npm install",
+    "heroku-postbuild" :"npm run install-client && npm run build",
     "build":"cd client && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
